--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -79,42 +79,13 @@ jobs:
         run: |
           mkdir -p app/models models logs temp
 
-          cat > app/models/__init__.py <<-'EOF'
-          """Models package placeholder for testing"""
-          EOF
+          printf '"""Models package placeholder for testing"""\n' > app/models/__init__.py
 
-          cat > app/models/model_loader.py <<-'EOF'
-          """Model loader placeholder for CI testing"""
-          import logging
-
-          logger = logging.getLogger(__name__)
-
-          class ModelLoader:
-              def __init__(self):
-                  self.models = {}
-                  logger.info("ModelLoader initialized (CI mode)")
-
-              async def load_all_models(self):
-                  logger.info("Skipping model loading in CI environment")
-                  return True
-
-              def get_model(self, model_name):
-                  return None
-
-          model_loader = ModelLoader()
-          EOF
+          printf '"""Model loader placeholder for CI testing"""\nimport logging\n\nlogger = logging.getLogger(__name__)\n\nclass ModelLoader:\n    def __init__(self):\n        self.models = {}\n        logger.info("ModelLoader initialized (CI mode)")\n\n    async def load_all_models(self):\n        logger.info("Skipping model loading in CI environment")\n        return True\n\n    def get_model(self, model_name):\n        return None\n\nmodel_loader = ModelLoader()\n' > app/models/model_loader.py
 
           echo "# Models directory for CI testing" > models/README.md
 
-          cat > .env.test <<-'EOF'
-          DEBUG=true
-          LOG_LEVEL=INFO
-          SITE_ID=ci-test
-          ENABLE_MODEL_LOADING=false
-          REDIS_URL=redis://localhost:6379/0
-          DOCKER_CONTAINER=false
-          ENABLE_STREAMING=false
-          EOF
+          printf 'DEBUG=true\nLOG_LEVEL=INFO\nSITE_ID=ci-test\nENABLE_MODEL_LOADING=false\nREDIS_URL=redis://localhost:6379/0\nDOCKER_CONTAINER=false\nENABLE_STREAMING=false\n' > .env.test
 
       - name: 🔍 Verify test setup
         working-directory: ai_service
@@ -158,23 +129,11 @@ jobs:
               --tb=no \
               || {
                 if [ ! -f coverage.xml ]; then
-                  cat > coverage.xml <<'EOF'
-                  <?xml version="1.0" ?>
-                  <coverage version="7.0" timestamp="$(date +%s)" lines-valid="100" lines-covered="0" line-rate="0.0">
-                    <sources><source>./app</source></sources>
-                    <packages></packages>
-                  </coverage>
-                  EOF
+                  printf '<?xml version="1.0"?>\n<coverage version="7.0" timestamp="1" lines-valid="100" lines-covered="0" line-rate="0.0">\n<sources><source>./app</source></sources>\n<packages></packages>\n</coverage>\n' > coverage.xml
                 fi
               }
           else
-            cat > coverage.xml <<'EOF'
-            <?xml version="1.0" ?>
-            <coverage version="7.0" timestamp="$(date +%s)" lines-valid="100" lines-covered="0" line-rate="0.0">
-              <sources><source>./app</source></sources>
-              <packages></packages>
-            </coverage>
-            EOF
+            printf '<?xml version="1.0"?>\n<coverage version="7.0" timestamp="1" lines-valid="100" lines-covered="0" line-rate="0.0">\n<sources><source>./app</source></sources>\n<packages></packages>\n</coverage>\n' > coverage.xml
           fi
 
       - name: 📊 Generate Coverage Report
@@ -221,34 +180,19 @@ jobs:
             COVERAGE_DETAILS="No detailed coverage data available"
           fi
 
-          cat > COVERAGE.md <<'EOF'
-          # 📊 Code Coverage Report - AI Service
-
-          **Branch:** ${{ github.ref_name }}
-          **Commit:** [`${GITHUB_SHA:0:7}`](https://github.com/${{ github.repository }}/commit/${{ github.sha }})
-          **Generated:** $(date '+%Y-%m-%d %H:%M:%S UTC')
-          **Python Version:** ${{ matrix.python-version }}
-          **Workflow:** [`${{ github.run_id }}`](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
-
-          ## 🎯 Coverage Summary
-
-          ![Coverage](https://img.shields.io/badge/Coverage-${COVERAGE_PERCENTAGE:-0}%25-${COVERAGE_COLOR:-red})
-
-          | Metric | Value | Status |
-          |--------|-------|--------|
-          | **Coverage** | ${COVERAGE_PERCENTAGE:-0}% | $([ "${COVERAGE_PERCENTAGE:-0}" -ge 80 ] && echo "✅ Pass" || echo "❌ Fail") |
-          | **Threshold** | 80% | Target |
-
-          ## 📈 Detailed Coverage Report
-
-          ```
-          ${COVERAGE_DETAILS}
-          ```
-
-          ---
-          *Report generated automatically by GitHub Actions*
-          *Access this report at: [COVERAGE.md](https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md)*
-          EOF
+          printf '# 📊 Code Coverage Report - AI Service\n\n**Branch:** %s\n**Commit:** [\`%s\`](%s)\n**Generated:** %s\n**Python Version:** %s\n**Workflow:** [\`%s\`](%s)\n\n## 🎯 Coverage Summary\n\n![Coverage](https://img.shields.io/badge/Coverage-%s%%25-%s)\n\n| Metric | Value | Status |\n|--------|-------|--------|\n| **Coverage** | %s%% | %s |\n| **Threshold** | 80%% | Target |\n\n## 📈 Detailed Coverage Report\n\n```\n%s\n```\n\n---\n*Report generated automatically by GitHub Actions*\n*Access this report at: [COVERAGE.md](https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md)*\n' \
+            "${{ github.ref_name }}" \
+            "${GITHUB_SHA:0:7}" \
+            "https://github.com/${{ github.repository }}/commit/${{ github.sha }}" \
+            "$(date '+%Y-%m-%d %H:%M:%S UTC')" \
+            "${{ matrix.python-version }}" \
+            "${{ github.run_id }}" \
+            "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" \
+            "${COVERAGE_PERCENTAGE:-0}" \
+            "${COVERAGE_COLOR:-red}" \
+            "${COVERAGE_PERCENTAGE:-0}" \
+            "$([ "${COVERAGE_PERCENTAGE:-0}" -ge 80 ] && echo "✅ Pass" || echo "❌ Fail")" \
+            "${COVERAGE_DETAILS}" > COVERAGE.md
 
           echo "✅ Coverage report generated successfully"
           echo "COVERAGE_MD_LINK=https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md" >> $GITHUB_ENV
@@ -304,6 +248,8 @@ jobs:
       - name: 💾 Commit COVERAGE.md for Pull Request Events
         if: github.event_name == 'pull_request' && matrix.python-version == '3.12'
         working-directory: ai_service
+        env:
+          PR_HEAD_REF: ${{ github.event.pull_request.head.ref }}
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
@@ -314,16 +260,16 @@ jobs:
           git commit -m "📊 Update coverage report for PR - ${COVERAGE_PERCENTAGE:-0}% [skip ci]"
           max_retries=3
           for i in $(seq 1 $max_retries); do
-            if git push origin HEAD:${{ github.event.pull_request.head.ref }}; then
-              echo "✅ Successfully pushed coverage report to PR branch ${{ github.event.pull_request.head.ref }}"
-              echo "COVERAGE_MD_PR_LINK=https://github.com/${{ github.repository }}/blob/${{ github.event.pull_request.head.ref }}/ai_service/COVERAGE.md" >> $GITHUB_ENV
+            if git push origin "HEAD:$PR_HEAD_REF"; then
+              echo "✅ Successfully pushed coverage report to PR branch $PR_HEAD_REF"
+              echo "COVERAGE_MD_PR_LINK=https://github.com/${{ github.repository }}/blob/$PR_HEAD_REF/ai_service/COVERAGE.md" >> $GITHUB_ENV
               break
             else
               if [ $i -eq $max_retries ]; then
                 exit 1
               fi
               sleep 5
-              git pull --rebase origin ${{ github.event.pull_request.head.ref }}
+              git pull --rebase origin "$PR_HEAD_REF"
             fi
           done
 
@@ -393,3 +339,4 @@ jobs:
           else
             echo "- Markdown coverage report committed to PR branch" >> $GITHUB_STEP_SUMMARY
             echo "- Access the coverage report at: [COVERAGE.md](${{ env.COVERAGE_MD_PR_LINK }})" >> $GITHUB_STEP_SUMMARY
+          fi
