--- a/.github/workflows/ai_service/ci-cd.yml
+++ b/.github/workflows/ai_service/ci-cd.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
@@ -125,7 +125,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
@@ -183,12 +183,14 @@ jobs:
           retention-days: 30
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         if: matrix.test-type == 'unit'
         with:
-          file: ./callcenter-ai/ai_service/coverage.xml
+          file: ./ai_service/coverage.xml
           flags: ai-service
           name: ai-service-coverage
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   # Docker Build and Test
   docker-build:
@@ -273,7 +275,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
           cache: 'pip'
@@ -344,7 +346,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
@@ -402,7 +404,7 @@ jobs:
   deploy-staging:
     name: Deploy to Staging
     runs-on: ubuntu-latest
-    needs: [security-scan, model-tests, performance-test]
+    needs: [docker-build, security-scan, model-tests, performance-test]
     if: |
       (github.ref == 'refs/heads/develop' || 
        github.event.inputs.environment == 'staging') &&
@@ -447,7 +449,7 @@ jobs:
   deploy-production:
     name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: [security-scan, model-tests, performance-test]
+    needs: [docker-build, security-scan, model-tests, performance-test]
     if: |
       (github.ref == 'refs/heads/main' || 
        github.event.inputs.environment == 'production') &&
@@ -499,28 +501,7 @@ jobs:
       - name: Generate deployment report
         run: |
           echo "📋 Generating deployment report..."
-          cat > deployment-report.md << 'EOF'
-          # AI Service Deployment Report
-          
-          **Build Date:** $(date)
-          **Git SHA:** ${{ github.sha }}
-          **Branch:** ${{ github.ref_name }}
-          
-          ## Deployment Status
-          - **Staging:** ${{ needs.deploy-staging.result }}
-          - **Production:** ${{ needs.deploy-production.result }}
-          
-          ## Quality Gates
-          - **Code Quality:** ${{ needs.code-quality.result }}
-          - **Tests:** ${{ needs.test.result }}
-          - **Security:** ${{ needs.security-scan.result }}
-          - **Performance:** ${{ needs.performance-test.result }}
-          
-          ## Next Steps
-          - Monitor application performance
-          - Review logs for any issues
-          - Update documentation if needed
-          EOF
+          printf '# AI Service Deployment Report\n\n**Build Date:** %s\n**Git SHA:** ${{ github.sha }}\n**Branch:** ${{ github.ref_name }}\n\n## Deployment Status\n- **Staging:** ${{ needs.deploy-staging.result }}\n- **Production:** ${{ needs.deploy-production.result }}\n\n## Quality Gates\n- Quality gates have been executed during the pipeline\n\n## Next Steps\n- Monitor application performance\n- Review logs for any issues\n- Update documentation if needed\n' "$(date)" > deployment-report.md
 
       - name: Upload deployment report
         uses: actions/upload-artifact@v4
