--- a/ai_service/pytest.ini
+++ b/ai_service/pytest.ini
@@ -1,5 +1,6 @@
 [tool:pytest]
 # Pytest configuration for AI Service
+asyncio_mode = auto
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
