--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -245,33 +245,22 @@ jobs:
         env:
           COVERAGE_PERCENTAGE: ${{ env.COVERAGE_PERCENTAGE }}
 
-      - name: 💾 Commit COVERAGE.md for Pull Request Events
-        if: github.event_name == 'pull_request' && matrix.python-version == '3.12'
+      - name: 💾 Commit COVERAGE.md to coverage-report branch
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && matrix.python-version == '3.12'
         working-directory: ai_service
-        env:
-          PR_HEAD_REF: ${{ github.event.pull_request.head.ref }}
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          if git diff --quiet COVERAGE.md 2>/dev/null; then
-            exit 0
-          fi
+
+          git fetch origin coverage-report || true
+          git checkout -B coverage-report origin/coverage-report || git checkout -b coverage-report
+
+          cp COVERAGE.md ../COVERAGE.md  # Move to repo root
+          cd ..
           git add COVERAGE.md
-          git commit -m "📊 Update coverage report for PR - ${COVERAGE_PERCENTAGE:-0}% [skip ci]"
-          max_retries=3
-          for i in $(seq 1 $max_retries); do
-            if git push origin "HEAD:$PR_HEAD_REF"; then
-              echo "✅ Successfully pushed coverage report to PR branch $PR_HEAD_REF"
-              echo "COVERAGE_MD_PR_LINK=https://github.com/${{ github.repository }}/blob/$PR_HEAD_REF/ai_service/COVERAGE.md" >> $GITHUB_ENV
-              break
-            else
-              if [ $i -eq $max_retries ]; then
-                exit 1
-              fi
-              sleep 5
-              git pull --rebase origin "$PR_HEAD_REF"
-            fi
-          done
+          git commit -m "📊 Update coverage report - ${COVERAGE_PERCENTAGE:-0}% [skip ci]" || exit 0
+          git push origin coverage-report --force
+
 
       - name: 📤 Upload Coverage to Codecov
         if: always()
