--- a/helplinev1/docker-compose.yml
+++ b/helplinev1/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     networks:
       - helpline-network
 
-  # PHP-FPM Backend API
+  # PHP-FPM Backend API   # PHP-FPM Backend API
   php-api:
     build:
       context: ./docker/php    # CHANGED: from . to ./docker/php
