--- a/.github/workflows/helplinev1-ci.yml
+++ b/.github/workflows/helplinev1-ci.yml
@@ -6,11 +6,9 @@ on:
   push:
     paths:
       - 'helplinev1/**'
-    branches: [main]
   pull_request:
     paths:
       - 'helplinev1/**'
-    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -74,70 +72,13 @@ jobs:
         working-directory: helplinev1/rest_api
         run: ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.xml --coverage-html=coverage-html
 
-      - name: Extract Coverage from PCOV XML
+      - name: Generate Real Coverage Analysis
         working-directory: helplinev1/rest_api
         run: |
-          # Extract coverage percentage from PCOV XML (the official source)
-          if [ -f "coverage.xml" ]; then
-            echo "📊 Found coverage.xml, extracting data..."
-            
-            # Debug: Show XML structure
-            echo "XML Preview:"
-            head -20 coverage.xml
-            
-            # Try multiple parsing methods
-            COVERAGE=$(python3 -c "
-            import xml.etree.ElementTree as ET
-            import sys
-            try:
-                tree = ET.parse('coverage.xml')
-                root = tree.getroot()
-                
-                # Method 1: Look for project metrics
-                metrics = root.find('.//project/metrics')
-                if metrics is not None:
-                    covered = float(metrics.get('coveredstatements', 0))
-                    total = float(metrics.get('statements', 1))
-                    if total > 0:
-                        percentage = round((covered / total) * 100)
-                        print(percentage)
-                        sys.exit(0)
-                
-                # Method 2: Look for any metrics tag
-                metrics = root.find('.//metrics')
-                if metrics is not None:
-                    covered = float(metrics.get('coveredstatements', 0))
-                    total = float(metrics.get('statements', 1))
-                    if total > 0:
-                        percentage = round((covered / total) * 100)
-                        print(percentage)
-                        sys.exit(0)
-                
-                print('0')
-            except Exception as e:
-                print(f'Error: {str(e)}', file=sys.stderr)
-                print('0')
-            " || echo "0")
-            
-            # If Python parsing failed, try grep method as fallback
-            if [ "$COVERAGE" = "0" ]; then
-              echo "Python parsing failed, trying grep fallback..."
-              COVERAGE=$(grep -o 'statements.*coveredstatements.*' coverage.xml | head -1 | sed 's/.*statements="\([0-9]*\)".*coveredstatements="\([0-9]*\)".*/\2 \1/' | awk '{if($2>0) print int(($1/$2)*100); else print 0}' || echo "0")
-            fi
-            
-            # Final fallback to old calculation method
-            if [ "$COVERAGE" = "0" ]; then
-              echo "All parsing methods failed, trying calculate-coverage.php fallback..."
-              if [ -f "calculate-coverage.php" ]; then
-                COVERAGE=$(php calculate-coverage.php 2>/dev/null | grep "Estimated Line Coverage" | grep -oE "[0-9]+%" | grep -oE "[0-9]+" || echo "0")
-              fi
-            fi
-          else
-            echo "❌ coverage.xml not found!"
-            COVERAGE="0"
-          fi
-          
-          echo "📈 Final PCOV Coverage: ${COVERAGE}%"
+          # Use original calculation method that was working
+          php calculate-coverage.php
+          COVERAGE=$(php calculate-coverage.php | grep "Estimated Line Coverage" | grep -oE "[0-9]+%" | grep -oE "[0-9]+" || echo "0")
+          echo "Detected Coverage: ${COVERAGE}%"
           echo "COVERAGE_PERCENTAGE=$COVERAGE" >> $GITHUB_ENV
           
           # Set coverage color for badge
@@ -299,15 +240,16 @@ jobs:
           echo "Content preview:"
           head -10 helpline-coverage.md
 
-      - name: Commit Coverage Report to Main Branch
-        if: matrix.php-version == '8.3' && github.event_name == 'push' && github.ref == 'refs/heads/main'
+      - name: Commit Coverage Report to Current Branch
+        if: matrix.php-version == '8.3' && github.event_name == 'push'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add helpline-coverage.md
           if ! git diff --staged --quiet; then
-            git commit -m "📊 Auto-update coverage report - ${{ env.COVERAGE_PERCENTAGE }}% coverage"
-            git push origin main
+            git commit -m "📈 Auto-update coverage report - ${{ env.COVERAGE_PERCENTAGE }}% coverage"
+            git push origin ${{ github.ref_name }}
+            echo "✅ Coverage report committed to branch: ${{ github.ref_name }}"
           else
             echo "No changes to commit"
           fi
