--- a/.github/workflows/helplinev1-ci.yml
+++ b/.github/workflows/helplinev1-ci.yml
@@ -94,146 +94,42 @@ jobs:
 
       - name: Generate Coverage README.md
         run: |
-          # Create comprehensive coverage README in root directory
+          # Create clean, simple coverage report
+          TIMESTAMP=$(date -u "+%Y-%m-%d %H:%M:%S UTC")
+          
           cat > helpline-coverage.md << EOF
-          # 📊 HelplineV1 Code Coverage Report
-          
-          ![Coverage](https://img.shields.io/badge/Coverage-${{ env.COVERAGE_PERCENTAGE }}%25-${{ env.COVERAGE_COLOR }})
-          ![PHP](https://img.shields.io/badge/PHP-8.2%20%7C%208.3-blue)
-          ![Tests](https://img.shields.io/badge/Tests-PHPUnit-green)
-          ![Database](https://img.shields.io/badge/Database-MySQL%208.0-orange)
-          
-          ## 📈 Coverage Summary
-          
-          **Overall Coverage:** ${{ env.COVERAGE_PERCENTAGE }}%
-          
-          **Generated:** \$(date -u "+%Y-%m-%d %H:%M:%S UTC")
-          
-          **Branch:** ${{ github.ref_name }}
-          
-          **Commit:** ${{ github.sha }}
-          
-          **PHP Version:** ${{ matrix.php-version }}
-          
-          **Coverage Source:** PCOV (PHPUnit Official)
-          
-          ## 🎯 Coverage Status
-          
-          EOF
-          
+# 📊 HelplineV1 Code Coverage Report
+
+![Coverage](https://img.shields.io/badge/Coverage-${{ env.COVERAGE_PERCENTAGE }}%25-${{ env.COVERAGE_COLOR }})
+![Tests](https://img.shields.io/badge/Tests-PHPUnit-blue)
+
+## Coverage Summary
+
+| Metric | Value |
+|--------| ------|
+| **Overall Coverage** | **${{ env.COVERAGE_PERCENTAGE }}%** |
+| Generated | ${TIMESTAMP} |
+| Branch | ${{ github.ref_name }} |
+| PHP Version | ${{ matrix.php-version }} |
+EOF
+
           # Add status based on coverage percentage
           if [ "${{ env.COVERAGE_PERCENTAGE }}" -ge "80" ]; then
-            echo "🟢 **EXCELLENT** - Coverage exceeds 80%" >> helpline-coverage.md
+            echo "| **Status** | 🟢 EXCELLENT |" >> helpline-coverage.md
           elif [ "${{ env.COVERAGE_PERCENTAGE }}" -ge "60" ]; then
-            echo "🟡 **GOOD** - Coverage is between 60-80%" >> helpline-coverage.md
+            echo "| **Status** | 🟡 GOOD |" >> helpline-coverage.md
           elif [ "${{ env.COVERAGE_PERCENTAGE }}" -ge "40" ]; then
-            echo "🟠 **FAIR** - Coverage is between 40-60%" >> helpline-coverage.md
+            echo "| **Status** | 🟠 FAIR |" >> helpline-coverage.md
           else
-            echo "🔴 **NEEDS IMPROVEMENT** - Coverage below 40%" >> helpline-coverage.md
+            echo "| **Status** | 🔴 NEEDS IMPROVEMENT |" >> helpline-coverage.md
           fi
           
-          # Add detailed coverage information
+          # Add simple footer
           cat >> helpline-coverage.md << 'EOF'
-          
-          ## 📋 Test Details
-          
-          ### 🧪 Test Suite Information
-          - **Framework:** PHPUnit
-          - **Coverage Driver:** PCOV
-          - **Test Database:** MySQL 8.0
-          - **Test Environment:** Ubuntu Latest
-          
-          ### 📊 Coverage Breakdown
-          
-          The coverage analysis includes:
-          - ✅ REST API endpoints (`/api/`)
-          - ✅ Core PHP libraries (`/lib/`)
-          - ✅ Database interactions
-          - ✅ Authentication mechanisms
-          - ✅ Data validation
-          
-          ## 🎯 Coverage Guidelines
-          
-          | Coverage | Status | Description |
-          |----------|--------|-------------|
-          | 90%+     | 🟢 Excellent | Outstanding test coverage |
-          | 80-89%   | 🟡 Good | Well-tested codebase |
-          | 60-79%   | 🟠 Fair | Moderate test coverage |
-          | 40-59%   | 🔴 Poor | Limited test coverage |
-          | <40%     | ❌ Critical | Insufficient test coverage |
-          
-          ## 📁 Coverage Files
-          
-          The following coverage files are generated:
-          
-          - **📊 HTML Report:** Available in GitHub Actions artifacts (`coverage-html/`)
-          - **📄 XML Report:** `coverage.xml` (for Codecov integration)
-          - **📝 Text Report:** Available in CI logs
-          - **📋 This Report:** `helpline-coverage.md`
-          
-          ## 🚀 Running Tests Locally
-          
-          ### Prerequisites
-          ```bash
-          # Install PHP 8.2+ with required extensions
-          # Install Composer
-          # Setup MySQL 8.0
-          ```
-          
-          ### Setup and Run Tests
-          ```bash
-          # Navigate to REST API directory
-          cd helplinev1/rest_api
-          
-          # Install dependencies
-          composer install
-          
-          # Setup test database
-          mysql -u root -p -e "CREATE DATABASE helpline_test;"
-          mysql -u root -p helpline_test < config/uchl.sql
-          
-          # Run tests
-          ./vendor/bin/phpunit --verbose --testdox
-          
-          # Run tests with coverage
-          ./vendor/bin/phpunit --coverage-html coverage-html --coverage-text
-          
-          # View HTML coverage report
-          open coverage-html/index.html
-          ```
-          
-          ## 🐳 Docker Testing
-          
-          ```bash
-          # Build and run with Docker Compose
-          cd helplinev1
-          docker compose up -d
-          
-          # Run tests in container
-          docker exec helpline-php-api ./vendor/bin/phpunit
-          ```
-          
-          ## 📈 Continuous Integration
-          
-          This coverage report is automatically generated by:
-          - **Workflow:** `.github/workflows/helplinev1-ci.yml`
-          - **Trigger:** Push/PR to main branch with changes in `helplinev1/`
-          - **Matrix Testing:** PHP 8.2 & 8.3
-          - **External Integration:** Codecov for coverage tracking
-          
-          ## 🔗 Links
-          
-          - [GitHub Actions Workflow](../../.github/workflows/helplinev1-ci.yml)
-          - [PHPUnit Documentation](https://phpunit.de/)
-          - [PCOV Documentation](https://github.com/krakjoe/pcov)
-          - [Codecov Dashboard](https://codecov.io/gh/${{ github.repository }})
-          
-          ---
-          
-          *Generated automatically by GitHub Actions*
-          
-          *Workflow Run: [${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})*
-          EOF
+
+---
+*Generated automatically by GitHub Actions*
+EOF
           
           echo "✅ Coverage README.md generated in root directory"
           ls -la helpline-coverage.md
