--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -196,54 +196,21 @@ jobs:
           echo "✅ Coverage report generated successfully"
           echo "COVERAGE_MD_LINK=https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md" >> $GITHUB_ENV
 
-      - name: 💾 Create Branch and Commit COVERAGE.md for Push Events
-        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && matrix.python-version == '3.12'
-        working-directory: ai_service
-        run: |
-          set -x
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          if git diff --quiet COVERAGE.md 2>/dev/null; then
-            exit 0
-          fi
-          BRANCH_NAME="update-coverage-$(date +%s)"
-          git checkout -b $BRANCH_NAME
-          git add COVERAGE.md
-          git commit -m "📊 Update coverage report - ${COVERAGE_PERCENTAGE:-0}% [skip ci]"
-          max_retries=3
-          for i in $(seq 1 $max_retries); do
-            if git push origin $BRANCH_NAME; then
-              echo "✅ Successfully pushed coverage report to branch $BRANCH_NAME"
-              echo "COVERAGE_MD_LINK=https://github.com/${{ github.repository }}/blob/$BRANCH_NAME/ai_service/COVERAGE.md" >> $GITHUB_ENV
-              break
-            else
-              if [ $i -eq $max_retries ]; then
-                exit 1
-              fi
-              sleep 5
-              git pull --rebase origin $BRANCH_NAME || true
-            fi
-          done
+   
 
-      - name: 📬 Create Pull Request for Push Events
-        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && matrix.python-version == '3.12'
-        uses: peter-evans/create-pull-request@v7
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "📊 Update coverage report - ${COVERAGE_PERCENTAGE:-0}% [skip ci]"
-          branch: update-coverage-$(date +%s)
-          base: ${{ github.ref_name }}
-          title: "Update COVERAGE.md - ${COVERAGE_PERCENTAGE:-0}%"
-          body: |
-            Automated update of COVERAGE.md with code coverage report.
-            - Coverage: ${COVERAGE_PERCENTAGE:-0}%
-            - Generated: $(date '+%Y-%m-%d %H:%M:%S UTC')
-            - Workflow: [${{ github.run_id }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
-            - View report: [COVERAGE.md](https://github.com/${{ github.repository }}/blob/${{ env.COVERAGE_MD_LINK }}/ai_service/COVERAGE.md)
-          labels: automated, coverage
-          delete-branch: true
-        env:
-          COVERAGE_PERCENTAGE: ${{ env.COVERAGE_PERCENTAGE }}
+      - name: Run unit tests and generate coverage
+        run: |
+          echo "🛠 Running unit tests..."
+          pytest --cov=ai_service --cov-report=term --cov-report=markdown:Coverage.md
+          echo "✅ Unit tests completed."
+
+          if [ -f Coverage.md ]; then
+            echo "📄 Coverage.md generated successfully."
+            cat Coverage.md
+          else
+            echo "❌ Coverage.md was NOT generated."
+            exit 1
+          fi
 
       - name: Commit Coverage.md to PR branch
         run: |
